[package]
name = "multitime"
version = "0.1.0-reserved1"
edition = "2021"
description = "Rewrite of multitime by ltratt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "multitime_lib"
path = "src/lib/lib.rs"

[dependencies]
